# HAL

./: .gitignore  CMakeLists.txt  Common.cmake  Devices.h  README  RPGConfig.cmake.in
Applications/AndroidLogger/: AndroidManifest.xml  AndroidUtils.cmake  CMakeLists.txt  local.properties  main.cpp
Applications/AndroidLogger/jni/: Application.mk  CMakeLists.txt  NativeOpenGLRenderer.cpp  NativeSensorInterface.cpp  main.cpp
Applications/AndroidSensorApp/: .classpath  .project  CMakeLists.txt
Applications/AndroidSensorApp/AndCam/: AndCam.cpp  AndCam.h  AndNodeCam.h  AndView.cpp  CMakeLists.txt  TestCam.cpp
Applications/AndroidSensorApp/android-sensor-app/: .gitignore  AndroidManifest.xml  CMakeLists.txt
Applications/CameraViewer/: CMakeLists.txt  main.cpp
Applications/LexusLogger/: BicycleModel.h  CMakeLists.txt  CalibParser.h  Velodyne_old.cpp  main.cpp  main_test.cpp  runAllSensor.sh  runLexusLogger.sh  runSystem.sh  runVelodyne.sh
Applications/LexusLogger/gui-engine/: .CMakeLists.txt.swp  CMakeLists.txt
Applications/PoseToNode/: CMakeLists.txt  main.cpp
Applications/SensorViewer/: CMakeLists.txt  db.xml  main.cpp
Applications/TestSim/: CMakeLists.txt  main.cpp
Applications/gps2cartesian/: CMakeLists.txt  gps2cartesian.cpp
Applications/logtool/: CMakeLists.txt  logtool.cpp
Devices/Camera/: CMakeLists.txt  CameraDevice.h  CameraDriverInterface.h
Devices/Hermes/: CMakeLists.txt  Hermes.cpp  Hermes.h  HermesException.cpp  HermesException.h  Node.h  ZmqEndpoint.cpp  ZmqEndpoint.h
HAL/: CMakeLists.txt  Devices.h  HALConfig.cmake.in  VirtualDevice.cpp  VirtualDevice.h  config.h.in  hal-config.cmake.in
HAL/Camera/: AutoExposureCamera.h  AutoExposureInterface.h  CMakeLists.txt  CameraDevice.h  CameraDriverInterface.h  CameraException.h
HAL/Car/: CMakeLists.txt  CarDevice.h  CarDriverInterface.h
HAL/Controllers/: CarController.h  test.cpp
HAL/Devices/: CMakeLists.txt  DeviceDriverInterface.h  DeviceDriverRegistry.cpp  DeviceDriverRegistry.h  DeviceException.h  DeviceFactory.h  DeviceRegistry.cpp  DeviceRegistry.h  DeviceTime.cpp  DeviceTime.h  DriverFactory.h  DriverInterface.h  SharedLoad.h  SharedLoad.h.in
HAL/Encoder/: CMakeLists.txt  EncoderDevice.h  EncoderDriverInterface.h
HAL/Gamepad/: CMakeLists.txt  GamepadDevice.h  GamepadDriverInterface.h
HAL/IMU/: CMakeLists.txt  IMUDevice.h  IMUDriverInterface.h
HAL/LIDAR/: CMakeLists.txt  LIDARDevice.h  LIDARDriverInterface.h
HAL/Messages/: .Car.proto.swp  .Matrix.proto.swp  CMakeLists.txt  Camera.proto  CameraModel.proto  Car.proto  CarPlanner.proto  Command.h  Command.proto  Encoder.proto  Gamepad.proto  Header.proto  Image.cpp  Image.h  Image.proto  ImageArray.h  ImagePyramid.h  Imu.proto  Lidar.proto  Logger.cpp  Logger.h  Matrix.h  Matrix.proto  Messages.proto  NodeCamMessage.proto  NodeCar.proto  Pose.h  Pose.proto  PoseSensor.proto  Reader.cpp  Reader.h  SceneGraphShapes.proto  Signal.proto  Velodyne.cpp  Velodyne.h
HAL/Posys/: CMakeLists.txt  PosysDevice.h  PosysDriverInterface.h
HAL/Signal/: CMakeLists.txt  SignalDevice.h  SignalDriverInterface.h
HAL/Utils/: CMakeLists.txt  Node.h  PropertyMap.h  Sim.xml  SimLauncher.h  StringUtils.h  TicToc.h  Uri.h
HAL/WheeledVehicle/: TODO
HAL/cmake_modules/: FindOpenCV2.cmake  FindUSB1.cmake
LogTools/LogViewer/: CMakeLists.txt  GLThumbnailView.h  GLThumbnails.h  ViewerGui.h
Messages/: CMakeLists.txt  Camera.proto  Image.proto  Imu.proto  Logger.cpp  Matrix.h  Messages.proto  PbMsgsConfig.cmake.in  Pose.h  Pose.proto  PoseSensor.proto  messages.proto
ModelGraph/: Body.h  CMakeLists.txt  Joint.h  Link.h  Model.h  ModelGraph.h  ModelGraphConfig.cmake.in  ModelNode.h  Models.h  SE3.h  Shape.h
Node/: CMakeLists.txt  NODEConfig.cmake.in  Node.cpp  Node.h  NodeConfig.cmake.in  NodeConfig.h.in  NodeMessages.proto  PrintMessage.cpp  PrintMessage.h  Readme.txt  TODO  ZeroConf.cpp  ZeroConf.h
Node/Examples/: CMakeLists.txt  Node.cpp  Node1.cpp  Node2.cpp  TestNode.py
Node/android-ifaddrs/: README.md
Node/cmake_modules/: FindZeroMQ.cmake
PbMsgs/: BVP.proto  CMakeLists.txt  Camera.proto  CameraModel.proto  CarPlanner.proto  Encoder.proto  Header.proto  Image.cpp  Image.h  Image.proto  ImageArray.h  ImagePyramid.h  Imu.proto  Lidar.proto  Logger.cpp  Logger.h  Matrix.h  Matrix.proto  Messages.proto  NodeCamMessage.proto  NodeCar.proto  PbMsgsConfig.cmake.in  Pose.h  Pose.proto  Reader.cpp  Reader.h  SceneGraphShapes.proto  SimMessages.proto  Velodyne.cpp  Velodyne.h  config.h.in
PbMsgs/cmake_modules/: FindMVL.cmake  FindTinyXML2.cmake  LibFindMacros.cmake
Robots/: CMakeLists.txt  Robot.cpp  Robot.h
Robots/XML/: CMakeLists.txt  rg_tinyxml.cpp  rg_tinyxml.h  rg_tinyxmlparser.cpp
URDFParser/: CMakeLists.txt  EigenHelpers.h  GenURIFromURDF.h  TinyXMLTool.h  URDFParser.cpp  URDFParser.h  config.h.in
URDFParser/BulletStructs/: Constraint.h  ModelNode.h  Shape.h  SimRaycastVehicle.h  VehicleEnums.h
URDFParser/SimDevices/: CMakeLists.txt  SimDeviceInfo.h  SimDevices.cpp  SimDevices.h
URDFParser/SimRobots/: SimRobot.h  SimWorld.h
applications/AndroidLogger/: .project  CMakeLists.txt
applications/CamToNode/: CMakeLists.txt  main.cpp
applications/LogViewer/: CMakeLists.txt  ViewerGui.h
applications/PoseToNode/: CMakeLists.txt  main.cpp
applications/SensorViewer/: CMakeLists.txt  main.cpp
applications/gps2cartesian/: CMakeLists.txt  gps2cartesian.cpp
cmake_modules/: AirController.cpp  AirController.h  AirControllercpp.cpp  AndroidUtils.cmake  AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  CarController.cpp  CarController.h  Common.cmake  Common.h  Controller.cpp  Controller.h  FindAravis.cmake  FindCoreFoundation.cmake  FindIOKit.cmake  FindOpenCV.cmake  FindRealSense2.cmake  FindTinyXML2.cmake  FindZeroMQ.cmake  FindZeroMQPP.cmake  GLConsole.h  GLHelpers.h  Lqr.cpp  Lqr.h  Makefile  Messages.pb.cc  Messages.pb.h  Messages.proto  MochaConfig.h  MochaException.cpp  MochaException.h  Mochaccino.cpp  Node.h  Observer.cpp  Observer.h  Pid.cpp  Pid.h  Ppm.cpp  Ppm.h  (+8 more)
cmake_modules/physics/: CMakeLists.txt  Physics.cpp  Physics.h
(+831 files in other folders)
